bug fix: long word wrap problem

--- a/components/main-page/main-page.css
+++ b/components/main-page/main-page.css
@@ -57,3 +57,8 @@
 	padding-top: 5px;
 	padding-bottom: 8px;
 }
+
+.bucket-description-block {
+	word-wrap: break-word;
+	margin-right: 10px;
+}
