--- a/components/side-bar/side-bar.css
+++ b/components/side-bar/side-bar.css
@@ -14,6 +14,7 @@
 
 .side-bar-message-body {
 	text-align: justify;
+	word-wrap: break-word;
 	line-height: 1.2em;
 	font-family: "Times New Roman", Times, serif;
 }
